@@ -1,3 +1,7 @@
+2017-02-08  Arndt Kaiser
+	* use g_realloc() for iobuf-allocation because it's simpler,
+	  prevents memory leaks and performs better
+
 2017-02-07  Arndt Kaiser
 	* improve error handling of failed async-reads
 	* returned GErrors should be freed (memory leaks fixed)
